src/scss/styles.scss
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');

// $primary-color: #2c3e50;
$primary-color: #4c8c74;
// $primary-accent: #10182f;
$primary-accent: #f7fffb;
// $primary-accent: #fff;
$secondary-accent: #a0d6be;
$border-radius: 50px;

/* Potential colour themes */
$Wilderness-1-hex: #708c84;
$Wilderness-2-hex: #9ba685;
$Wilderness-3-hex: #bfa965;
$Wilderness-4-hex: #bf9460;
$Wilderness-5-hex: #0d0d0d;

.Broken-Top,
-Three-Sisters-Wilderness,
-Bend,
-Oregon-1-hex {
  color: #bf41aa;
}
.Broken-Top,
-Three-Sisters-Wilderness,
-Bend,
-Oregon-2-hex {
  color: #4384d9;
}
.Broken-Top,
-Three-Sisters-Wilderness,
-Bend,
-Oregon-3-hex {
  color: #558ed9;
}
.Broken-Top,
-Three-Sisters-Wilderness,
-Bend,
-Oregon-4-hex {
  color: #5a7302;
}
.Broken-Top,
-Three-Sisters-Wilderness,
-Bend,
-Oregon-5-hex {
  color: #595022;
}

$West-Kill-Mountains-Wilderness-Landscape-with-Green-Trees-and-Green-Grass-Forrest-Nature-Background-1-hex: #a4b3bf;
$West-Kill-Mountains-Wilderness-Landscape-with-Green-Trees-and-Green-Grass-Forrest-Nature-Background-2-hex: #344021;
$West-Kill-Mountains-Wilderness-Landscape-with-Green-Trees-and-Green-Grass-Forrest-Nature-Background-3-hex: #97a624;
$West-Kill-Mountains-Wilderness-Landscape-with-Green-Trees-and-Green-Grass-Forrest-Nature-Background-4-hex: #8a8c3e;
$West-Kill-Mountains-Wilderness-Landscape-with-Green-Trees-and-Green-Grass-Forrest-Nature-Background-5-hex: #8c8149;

html {
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
  font-size: 16px;
}

body::-webkit-scrollbar {
  width: 0.5rem;
}
body::-webkit-scrollbar-track {
  background: $primary-accent;
}
body::-webkit-scrollbar-thumb {
  background: $primary-color;
}

body {
  font-family: 'DM Sans', sans-serif;
  padding: 0;
  margin: 0;
  overflow-x: hidden;
}

a {
  text-decoration: none;
}

.content {
  min-height: 100vh;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  padding: 2rem;
  height: 55vh;
  width: 100vw;
}

.navbar {
  // position: fixed;
  overflow: hidden;
  background-color: transparent;
  text-align: center;
}

.navbar li {
  // display: inline;
  list-style-type: none;
  float: left;
}

.navbar li a {
  display: block;
  color: $primary-accent;
  margin-right: 1rem;
  line-height: 1.7;
}

.navbar li a:hover {
  border-bottom: 1px solid $primary-accent;
}

footer {
  // position: absolute;
  bottom: 0;
  left: 0;
  padding: 1rem 1rem 10rem 1rem;
  overflow: hidden;
  height: 15vh;
  width: 100%;
  background-color: $primary-color;
  color: $primary-accent;
}

footer ul li {
  list-style-type: none;
  line-height: 1.7;
  text-decoration: none;
}

footer ul li a {
  color: $primary-accent;
}

footer ul li a:hover {
  border-bottom: 1px solid $primary-accent;
}

.credits {
  display: flex;
  justify-content: center;
  font-size: 1.1rem;
}

.credits a {
  color: $primary-accent;
  text-decoration: none;
}

.credits a:hover {
  border-bottom: 1px solid $primary-accent;
}

.skewed {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 60%;
  background: $primary-color;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  z-index: -1;
  transform: skewY(-4deg);
  transform-origin: top left;
}

.btn {
  border-radius: 5px;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
  font-family: inherit;
  border: 1px solid $primary-accent;
  // transition: 0.2s;
}

.btn-primary {
  color: $primary-color;
  background-color: $primary-accent;
  border: 1px solid $primary-color;
  font-weight: bold;
  font-size: 1.2rem;
}

.btn-primary:hover {
  color: $primary-accent;
  background-color: transparent;
  border: 1px solid $primary-accent;
  border: 1px solid $primary-accent;
  transition: 0.2s;
}

.btn-secondary {
  color: $primary-accent;
  background-color: $primary-color;
  border: 1px solid $primary-accent;
  font-weight: bold;
  font-size: 1.2rem;
}

.btn-secondary:hover {
  color: $primary-color;
  background-color: $primary-accent;
  border: 1px solid $primary-color;
  transition: 0.2s;
}
.hero-container {
  display: flex;
  flex-direction: column;
  color: $primary-accent;
  // justify-content: center;
}

.hero-container h1 {
  font-size: 3rem;
}

.hero-container h2 {
  font-size: 2rem;
}

.hero-container p {
  // color: #1e1f21;
  font-size: 1.1rem;
  width: 60%;
  margin: auto;
  margin-bottom: 2rem;
}

.welcome-btns {
  display: flex;
  flex-direction: row;
  // margin-top: 50%;
}
.welcome-btns #btn-left {
  margin-right: 1rem;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background: $primary-accent;
  // font-size: 3rem;
  color: $primary-color;
  border: 1px solid $primary-color;
  // box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,
  // rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  // transition: all 500ms;
  overflow: hidden;
  // background-image: url('../img_1.jpg');
  // background-size: cover;
  // background-position: center;
  // background-repeat: no-repeat;
}

.card h1 {
  font-size: 1.4rem;
}

.card h2 {
  font-size: 1.2rem;
}

.card p {
  margin-left: 1.5rem;
  // margin: auto;
}

// .card:hover {
//   box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em,
//     rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
//   transform: translateY(-3px) scale(1.1);
// }

.card .card-img {
  display: block;
  // flex-direction: column;
  // justify-self: center;
  // align-content: center;
  border-radius: 5px 5px 0 0;
  // background-image: url('../img_1.jpg');
  // background-size: cover;
  // background-repeat: no-repeat;
  // background-position: center center;
  object-fit: fill;
  max-width: 90%;
  max-height: 40%;
}

.card .card-content {
  justify-content: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

// .card:hover {
//   color: $primary-accent;
//   background-color: $primary-color;
//   border: 1px solid $primary-accent;
//   transition: 0.2s;
// }

.basic-grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
}

.grid-container {
  margin: 5rem 2rem 5rem 2rem;
}

@media only screen and (max-width: 1200px) {
  .hero-container p {
    display: none;
  }
}

.form {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  padding: 2rem;
}

.form label {
  color: $primary-accent;
  margin-bottom: 0.3rem;
  margin-top: 1rem;
}

.form input {
  border-radius: 5px;
  outline: 0;
  border: 1px solid $primary-color;
  padding: 0.4rem;
}

.form button {
  margin-top: 1rem;
  font-family: inherit;
}

